Version 2.8
---------
 * Add packages compatible to fedora 39 to package build (#174)


Version 2.7
---------
 * Update README
 * End backup with warning if software emulated TPM device is attached
 (#169)
 * Detect remote connection based on libvirt URI, hecking hostnames could lead
 to situation where local backup is detected as remote backup (#170)


Version 2.6
---------
 * Fix IndexError exception if auth file is used in qemu uri (#167)
 * Credential function for libvirt must return integer: fix NoneType
 exception if actual libvirt authentication is required.
 * Simplify libvirt authentication code: attempt to use SASL based mechanism
 only if --user and --password options are set.
 * If authentication fails because of missing SASL mechs, ajdust error
 message, provide hint for --user and --password options.
 * Update README regards OVIRT/RHEV/OLVM (no mechanism available: No worthy
 mechs found)


Version 2.5
---------
 * Move some log messages from info to debug loglevel
 * Log information about libnbd version only once
 * Catch command not found error during remote backup if qemu-img
 is missing: change loglevel to warning.
 * Catch command not found error during remote restore: fail with
 proper error message.
 * If no qcow image info has been created during backup, issue warning
 during restore that default options are used.
 * Update README: add note about scratch files.
 * Do not attempt to freeze filesystems if virtual machine is in paused state
 (#166)


Version 2.4
---------
 * Update RADME
 * Add qemu-utils to package dependencies: if installed on a system without
 libvirt/qemu, backup fails because of missing qemu-img executable.
 * Add openssh-client to package dependencies: required for remote libvirtd
 connection.
 * Catch exception if executed commands such as qemu-img are missing on
 system.
 * Code cleanup

Version 2.3
---------
 * Update README
 * Add option -S (--start-domain): if specified and virtual domain is offline