@@ -438,6 +438,7 @@ def main() -> None:
         logging.info("Started backup job for debugging, exiting.")
         sys.exit(0)
 
+    backupSize: int = 0
     try:
         with ThreadPoolExecutor(max_workers=args.worker) as executor:
             futures = {
@@ -447,7 +448,9 @@ def main() -> None:
                 for count, Disk in enumerate(disks)
             }
             for future in as_completed(futures):
-                if future.result() is not True:
+                size, state = future.result()
+                backupSize += size
+                if state is not True:
                     raise exceptions.DiskBackupFailed("Backup of one disk failed")
     except exceptions.BackupException as e:
         logging.error("Disk backup failed: [%s]", e)
@@ -482,6 +485,7 @@ def main() -> None:
         )
         sys.exit(2)
 
+    logging.info("Total saved disk data: [%s]", lib.humanize(backupSize))
     logging.info("Finished successfully")
 
 
